<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/space_content">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/client_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_synerise_client_email"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/client_email_input_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/client_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_synerise_client_password"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/client_password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/client_sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/space_medium"
        android:text="@string/sign_in" />

</LinearLayout>