<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/space_large">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/profile_client_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provide_client_id"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/profile_client_id_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <include layout="@layout/include_separator" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/profile_client_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provide_client_email"
            app:errorEnabled="true"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/profile_client_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/profile_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_get_id" />

        <include layout="@layout/include_separator" />

        <Button
            android:id="@+id/profile_client_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_client_create" />

        <Button
            android:id="@+id/profile_client_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_client_register" />

        <Button
            android:id="@+id/profile_client_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_client_update" />

        <Button
            android:id="@+id/profile_client_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_client_delete" />

        <include layout="@layout/include_separator" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/profile_password_reset_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provide_client_email"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/profile_password_reset_email_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/profile_password_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_password_reset" />

        <include layout="@layout/include_separator" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/profile_password_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provide_new_password"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/profile_password_confirm_pass_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/profile_password_confirm_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/provide_token"
            app:hintAnimationEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/profile_password_confirm_token_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/profile_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_password_confirm" />

        <include layout="@layout/include_separator" />

        <Button
            android:id="@+id/get_profile_token"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_token" />

    </LinearLayout>

</ScrollView>
